# macpro-onemac-smart-automation

./: .gitignore  README.md  pom.xml
.github/: copilot-instructions.md
.github/agents/: scenario-generator.agent.md
.github/workflows/: onemac-smart-tests.yml
kafka-automation/: README.md  cli.py  config.yml  kafka_utils.py  pyproject.toml  sqlite_utils.py  utils.py
kafka-automation/examples/: new-medicaid-submission.json
kafka-automation/examples/s000/: 1.json  2.json  scenario.yml
kafka-automation/references/: medicaid-spa.md  scenario-generation.md
kafka-automation/scenarios/: inventory.md
kafka-automation/scenarios/s001/: 1.json  2.json  scenario.yml
kafka-automation/scenarios/s002/: 1.json  2.json  3.json  4.json  scenario.yml
src/main/java/gov/cms/smart/models/: BasePackage.java  CompletionStatusInfo.java  IdentifyingInfo.java  InitialSubmission.java  InitialSubmissionInfo.java  PackageDetails.java  PlanInfo.java  PriorityInfo.java  ServiceStatus.java  ServiceStatusInfo.java  SpaDetailsModel.java  SpaPackage.java  WaiverPackage.java
src/main/java/gov/cms/smart/pages/: AdjudicationTab.java  DetailsTab.java  HomePage.java  LoginPage.java  NewSPAPage.java  NewWaiverPage.java  ReviewTab.java  SPAPage.java  SPAsWaiversPage.java  (+3 more)
src/test/resources/: OneMACSmart.xml  TestCoverageDashboard_QA.xlsx  TestCoverageDashboard_UAT.xlsx  config.properties  log4j2.xml  packages.xlsx  packages_dev.xlsx  packages_qa.xlsx  packages_uat.xlsx  state_counters.xlsx  state_counters_dev.xlsx  state_counters_qa.xlsx  testDocument.docx  ~$TestCoverageDashboard_QA.xlsx
(+101 files in other folders)
