[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-automation"
version = "0.1.0"
description = "Utilities for publishing to and consuming from OneMAC MSK topics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "confluent-kafka>=2.4",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[project.scripts]
kafka-automation = "cli:main"

[tool.setuptools]
py-modules = ["cli", "kafka_utils", "sqlite_utils", "utils"]

[tool.ruff]
line-length = 100
target-version = "py311"
